fixed button alignment

--- a/src/style.css
+++ b/src/style.css
@@ -133,3 +133,8 @@
     
   }
 
+  .btn-container {
+    display: flex;
+    margin: 3rem;
+  }
+
